"After 10 mouths I am able  solve the issue , Login log out succesfully"

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-PORT=6000
-MONGO_URI="mongodb://Sayan_NoteFy:sayan1234@clusternotefy-shard-00-00.dm0w6.mongodb.net:27017,clusternotefy-shard-00-01.dm0w6.mongodb.net:27017,clusternotefy-shard-00-02.dm0w6.mongodb.net:27017/?ssl=true&replicaSet=atlas-atcv9l-shard-0&authSource=admin&retryWrites=true&w=majority"
+PORT=5000
+MONGO_URI="mongodb+srv://sayanmaitraj5:sayan123@cluster0.3truwco.mongodb.net/?retryWrites=true&w=majority"
 NODE_ENV=development
 JWT_SECRET=sayan1234
